tests/ivg/invalid/invalid_line_arguments.ivg
format IVG-3
// line with missing coordinate
line 0 0 10
